--- a/AI_NeuralNetwork_1/AI_NeuralNetwork_1/AI_NeuralNetwork_1.csproj
+++ b/AI_NeuralNetwork_1/AI_NeuralNetwork_1/AI_NeuralNetwork_1.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Initializer.cs" />
     <Compile Include="interfaces\INeuralLayer.cs" />
     <Compile Include="interfaces\INeuralNet.cs" />
     <Compile Include="interfaces\INeuron.cs" />
